# libtext

./: Makefile.am  README  README.md  bootstrap.sh  configure.ac
doc/: Makefile.am  Makefile.in  libtext.3.in  libtext.html
src/: Makefile.am  fstab.cpp  libtext.cpp  libtext.h  libtext.t.cpp  test.h
token/: ctest.h  makefile  readme.md  token.c  token.h  token.t.c
token/example/: argv.c
